tests/paczka1/fuzzy1/14111878.err
Error in line 3: WRup A359 94,0
Error in line 18: WRup A251 72,0
Error in line 15: A128 A128 88,9
Error in line 22: jw5TRmJ A359 2,9
Error in line 20: A128 A564 76,7
Error in line 24: auIQE A359 89,1
Error in line 26: oYYsAcsoF9 A128 90,6
